# Cmake-Emscripten-Project

./: CMakeLists.txt  LICENSE  README.md
Public/: getES.wasm.js  getES.wasm.wasm  index.html
Src/: fib.c
